# PowerPoint

./: README.md
sources/: CMakeLists.txt  main.cpp
sources/cli/: CMakeLists.txt  action_manager.cpp  cli.cpp  cli.hpp
sources/commands/: CMakeLists.txt  argument.hpp  command.cpp  command.hpp  common.hpp
sources/common/: CMakeLists.txt  a.out  assert.hpp  circle.h  common.hpp  line.h  parser.cpp  parser.hpp  point.h  rectangle.h  text_writer.cpp  text_writer.hpp  writer.cpp  writer.hpp
sources/test/: main.cpp
sources/ui/: CMakeLists.txt  commandlinetextedit.cpp  commandlinetextedit.hpp  diagramitem.cpp  diagramitem.hpp  diagramlineitem.cpp  diagramlineitem.hpp  diagramtextitem.cpp  diagramtextitem.hpp  graphicsscene.cpp  graphicsscene.hpp  mainwindow.cpp  mainwindow.h
